compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__function_call_incorrect_arg_types_fault_tolerance.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 321
expression: "\nfn add(x: Int, y: Int) {\n  x + y\n}\n\npub fn main() {\n  add(1.0, 1.0)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn add(x: Int, y: Int) {
  x + y
}

pub fn main() {
  add(1.0, 1.0)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:7:7
  │
7 │   add(1.0, 1.0)
  │       ^^^

Expected type:

    Int

Found type:

    Float

error: Type mismatch
  ┌─ /src/one/two.gleam:7:12
  │
7 │   add(1.0, 1.0)
  │            ^^^

Expected type:

    Int

Found type:

    Float
