compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__function_call_incorrect_arity_with_label_shorthand_fault_tolerance2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 397
expression: "\nfn wibble(wibble arg1: fn() -> Int, wobble arg2: Int, wabble arg3: Int) -> Int {\n  arg1() + arg2 + arg3\n}\n\npub fn main() {\n  let wobble = \"\"\n  wibble(fn() {\"\"}, wobble:)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn wibble(wibble arg1: fn() -> Int, wobble arg2: Int, wabble arg3: Int) -> Int {
  arg1() + arg2 + arg3
}

pub fn main() {
  let wobble = ""
  wibble(fn() {""}, wobble:)
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:8:3
  │
8 │   wibble(fn() {""}, wobble:)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 3 arguments, got 2

This call accepts these additional labelled arguments:

  - wabble

error: Type mismatch
  ┌─ /src/one/two.gleam:8:10
  │
8 │   wibble(fn() {""}, wobble:)
  │          ^^^^^^^^^

Expected type:

    fn() -> Int

Found type:

    fn() -> String
