compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__invalid_javascript_external_do_not_stop_analysis.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 237
expression: "\n@external(javascript, \"somemodule\", \"() => 123\")\npub fn one() -> Nil {\n  Nil\n}\n\npub fn two() -> Nil {\n  \"\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "somemodule", "() => 123")
pub fn one() -> Nil {
  Nil
}

pub fn two() -> Nil {
  ""
}


----- ERROR
error: Invalid JavaScript function
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn one() -> Nil {
  │ ^^^^^^^^^^^^^^^^^^^

The function `one` has an external JavaScript implementation but the
function name `() => 123` is not valid.

error: Type mismatch
  ┌─ /src/one/two.gleam:8:3
  │
8 │   ""
  │   ^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Nil

Found type:

    String
