compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__multiple_bad_statement_assignment_with_annotation_fault_tolerance.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 266
expression: "\npub fn main() {\n  let a: Int = \"not an int\"\n  let b: String = 1\n  let c = a + 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let a: Int = "not an int"
  let b: String = 1
  let c = a + 2
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:16
  │
3 │   let a: Int = "not an int"
  │                ^^^^^^^^^^^^

Expected type:

    Int

Found type:

    String

error: Type mismatch
  ┌─ /src/one/two.gleam:4:19
  │
4 │   let b: String = 1
  │                   ^

Expected type:

    String

Found type:

    Int

error: Type mismatch
  ┌─ /src/one/two.gleam:5:11
  │
5 │   let c = a + 2
  │           ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `<>` operator.
